--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,13 @@
-pyvirtualdisplay
-flask
-apprise
-webdriver-manager
-packaging
 certifi
 chardet
 idna
 requests
-selenium==4.8.0
+selenium==4.4.3
 urllib3
 ipapi
 func_timeout
 random-word==1.0.7
 pyyaml
 notifiers
-gunicorn
+pyvirtualdisplay
+webdriver-manager>=3.8.5
