--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
+pyvirtualdisplay
+flask
+apprise
+webdriver-manager
+packaging
 certifi
 chardet
 idna
 requests
-selenium==4.4.3
+selenium==4.8.0
 urllib3
 ipapi
 func_timeout
 random-word==1.0.7
 pyyaml
 notifiers
-pyvirtualdisplay
-webdriver-manager
+pyotp
 gunicorn
-flask
